Migrated activator template to Giter8 template